test/data/resolver/valid/merge_with_on_match_set.cypher
MERGE (a:Person) ON MATCH SET a.age = 30 RETURN a
