test/data/resolver/invalid/merge_on_match_unknown_property.cypher
MERGE (a:Person) ON MATCH SET a.notAProp = 30 RETURN a
